--- a/usr/map/map.jsonc
+++ b/usr/map/map.jsonc
@@ -43,7 +43,7 @@
     "ENGINE_EXECUTION_MODE"                     : "Backtest",
 
     // Auto Configuration
-    "ENGINE_AUTO_TO_ATTACH"                     : "test_auto",
+    "ENGINE_AUTO_TO_ATTACH"                     : "auto",
  
     // Data Configuration
     "ENGINE_DATA_FEED_MODE"                     : "SQLite3",
