Updated to version 0.2.1:
Patched: bug which read shifted prompt pane text as non-shifted. Added additional check to prompt text conditional to consider shifted keys.

Still need to fix an error with ZDk that is causing new autos to fail compilation, will patch soon.

--- a/usr/map/map.jsonc
+++ b/usr/map/map.jsonc
@@ -43,7 +43,7 @@
     "ENGINE_EXECUTION_MODE"                     : "Backtest",
 
     // Auto Configuration
-    "ENGINE_AUTO_TO_ATTACH"                     : "auto",
+    "ENGINE_AUTO_TO_ATTACH"                     : "testauto",
  
     // Data Configuration
     "ENGINE_DATA_FEED_MODE"                     : "SQLite3",
